grammar.js
    source_file: $ => repeat($._record),

    _record: $ => choice(
      $.problem_record,
      $.input_record,
      $.data_record,
      $.subroutines_record,
      $.model_record,
      $.pk_record,
      $.des_record,
      $.error_record,
      $.pred_record,
      $.theta_record,
      $.omega_record,
      $.sigma_record,
      $.estimation_record,
      $.covariance_record,
      $.table_record,
      $.simulation_record,
      $.abbreviated_record,
      $.sizes_record,
      $.mix_record,
      $.msfi_record,
      $.nonparametric_record,
      $.prior_record,
      $.thetap_record,
      $.thetapv_record,
      $.omegap_record,
      $.omegapd_record,
      $.sigmap_record,
      $.sigmapd_record,
      $.scatter_record,
    ),

    problem_record: $ => seq(
      alias(recordKeyword('PROB', 'PROBLEM'), $.record_keyword),
      optional($.problem_text),
    ),

    problem_text: $ => /[^\n$]+/,

    input_record: $ => seq(
      alias(recordKeyword('INP', 'INPT', 'INPUT'), $.record_keyword),
      repeat($.column_def),
    ),

    column_def: $ => seq(
      field('name', $.identifier),
      optional(field('modifier', choice(
        $.drop_modifier,
        $.skip_modifier,
        $.column_alias,
      ))),
    ),

    drop_modifier: $ => seq('=', alias(/DROP/i, $.option_name)),
    skip_modifier: $ => seq('=', alias(/SKIP/i, $.option_name)),
    column_alias: $ => seq('=', field('alias', $.identifier)),

    data_record: $ => seq(
      alias(recordKeyword('DAT', 'DATA', 'INFILE'), $.record_keyword),
      optional(choice($.filename, $.string)),
      repeat($._data_option),
    ),

    _data_option: $ => choice(
      $.ignore_option,
      $.accept_option,
      $.rewind_option,
      $.records_option,
      $.null_option,
      $.wide_option,
      $.checkout_option,
    ),

    rewind_option: $ => /REWIND/i,
    records_option: $ => seq(alias(/RECORDS/i, $.option_name), optional('='), $.integer),
    null_option: $ => seq(alias(/NULL/i, $.option_name), optional('='), choice($.number, $.identifier)),
    wide_option: $ => /WIDE/i,
    checkout_option: $ => /CHECKOUT/i,

    ignore_option: $ => seq(
      alias(/(IGN|IGNORE)/i, $.option_name),
      optional('='),
      choice($.ignore_character, $.ignore_condition),
    ),

    accept_option: $ => seq(
      alias(/ACCEPT/i, $.option_name),
      optional('='),
      $.ignore_condition,
    ),

    ignore_character: $ => /[^\s\(\)=]/,
    ignore_condition: $ => seq(
      '(',
      sep1($.binary_expression, ','),
      ')'
    ),

    pk_record: $ => seq(
      alias(recordKeyword('PK'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    _statement: $ => choice(
      $.assignment,
      $.if_statement,
      $.block_if,
      $.do_loop,
      $.do_while_loop,
      $.exit_statement,
      $.call_statement,
      $.fortran_line,
    ),

    if_statement: $ => seq(
      alias(/IF/i, $.keyword),
      '(',
      field('condition', $._expression),
      ')',
      field('action', $._statement),
    ),

    assignment: $ => seq(
      field('target', choice($.identifier, $.indexed_access)),
      '=',
      field('value', $._expression),
    ),

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.function_call,
      $.theta_ref,
      $.eta_ref,
      $.err_ref,
      $.eps_ref,
      $.indexed_access,
      $.identifier,
      $.number,
    ),

    binary_expression: $ => choice(
      // Exponentiation (highest, right-associative)
      prec.right(4, seq(field('left', $._expression), field('operator', alias('**', $.arithmetic_operator)), field('right', $._expression))),
      // Multiplication/Division
      prec.left(3, seq(field('left', $._expression), field('operator', alias('*', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(3, seq(field('left', $._expression), field('operator', alias('/', $.arithmetic_operator)), field('right', $._expression))),
      // Addition/Subtraction
      prec.left(2, seq(field('left', $._expression), field('operator', alias('+', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(2, seq(field('left', $._expression), field('operator', alias('-', $.arithmetic_operator)), field('right', $._expression))),
      // Comparisons (Fortran and C-style)
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.EQ\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.NE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('==', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('/=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<=', $.comparison_operator)), field('right', $._expression))),
      // Logical (lowest)
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.AND\./i)), $.logical_operator)), field('right', $._expression))),
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.OR\./i)), $.logical_operator)), field('right', $._expression))),
    ),

    unary_expression: $ => prec.right(5, choice(
      seq(field('operator', alias('-', $.arithmetic_operator)), field('operand', $._expression)),
      seq(field('operator', alias(/\.NOT\./i, $.logical_operator)), field('operand', $._expression)),
    )),

    theta_ref: $ => seq(/THETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    eta_ref: $ => seq(/ETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    theta_record: $ => seq(
      alias(recordKeyword('THE', 'THET', 'THTA', 'THETA'), $.record_keyword),
      repeat($.theta_init),
    ),

    theta_init: $ => seq(
      field('value', choice($.number, $.theta_bounds)),
      optional(field('fixed', $.fix_option)),
    ),

    table_record: $ => seq(
      alias(recordKeyword('TAB', 'TABL', 'TABLE'), $.record_keyword),
      repeat($._table_item),
    ),

    _table_item: $ => choice(
      $.table_column,
      $.file_option,
      $.noprint_option,
      $.oneheader_option,
      $.noappend_option,
      $.firstreconly_option,
      $.format_option,
      $.forward_option,
      $.append_option,
      $.conditional_option,
      $.esample_option,
      $.seed_option,
      $.wreschol_option,
    ),

    table_column: $ => choice(
      $.identifier,
      $.eta_ref,
      $.eps_ref,
      $.eta_range,
    ),

    eta_range: $ => seq(/ETAS?/i, '(', field('start', $.integer), ':', field('end', $.integer), ')'),

    file_option: $ => seq(alias(/FILE/i, $.option_name), optional('='), $.filename),
    noprint_option: $ => /NOPRINT/i,
    oneheader_option: $ => /ONEHEAD(ER)?/i,
    noappend_option: $ => /NOAPP(END)?/i,
    firstreconly_option: $ => /FIRST(REC)?ONLY/i,
    format_option: $ => seq(alias(/FORMAT/i, $.option_name), optional('='), $.format_spec),
    format_spec: $ => /[^\s$]+/,
    forward_option: $ => /FORWARD/i,
    append_option: $ => /APPEND/i,
    conditional_option: $ => /CONDITIONAL/i,
    esample_option: $ => seq(alias(/ESAMPLE/i, $.option_name), optional('='), $.integer),
    wreschol_option: $ => /WRESCHOL/i,

    comment: $ => /;+[^\n]*/,

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
    filename: $ => /[A-Za-z0-9_.\-\/\\:~]+/,
    string: $ => choice(
      /'[^']*'/,
      /"[^"]*"/,
    ),

    // integer and number are handled by external scanner
  }
});
